--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Allana Consultora</title>
-
+    <link rel="icon" href="./assets/favicon.png" type="csg-icon" />
+    <title>Colégio Simões Gonçalves</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/avatar.png" alt="Perfil Allana" />
-        <p>@allana.consultora_</p>
+        <img src="./assets/avatar.png" alt="Perfil CSG" />
+        <p>Colégio Simões Gonçalves</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -26,27 +26,29 @@
       <ul>
         <li>
           <a
-            href="https://www.natura.com.br/consultoria/allanagoncalves"
+            title="WhatsApp Simões Gonçalves"
+            href="https://api.whatsapp.com/send?phone=5585985973676"
             target="_blank"
-            >Espaço Digital</a
+            >WhatsApp</a
           >
         </li>
         <li>
           <a
-            href="https://api.whatsapp.com/send/?phone=5585992321321&text&type=phone_number&app_absent=0"
+            href="https://portal.kedu.com.br/Cliente"
             target="_blank"
-            >WhatsApp</a
+            title="Site da Kedu"
+            >Kedu</a
           >
         </li>
       </ul>
       <div id="social-links">
         <a
-          href="https://www.instagram.com/allana.consultora_?igsh=bnk3bXVlYTN4OGN6"
+          href="https://www.instagram.com/colegiosimoesgoncalves_/"
           target="_blank"
-          ><ion-icon name="logo-instagram"></ion-icon
+          ><ion-icon name="logo-instagram" title="Instagram"></ion-icon
         ></a>
       </div>
-      <footer>Desenvolvido por João V.</footer>
+      <!-- <footer>Desenvolvido por João V.</footer> -->
     </div>
 
     <script
