feat: update page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a
           href="https://www.instagram.com/colegiosimoesgoncalves_/"
           target="_blank"
-          ><ion-icon name="logo-instagram" title="Instagram"></ion-icon
+          ><ion-icon name="logo-instagram" title="Logo Instagram"></ion-icon
         ></a>
       </div>
       <!-- <footer>Desenvolvido por João V.</footer> -->
