fix: correcao url app kedu

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </li>
         <li>
           <a
-            href="https://portal.kedu.com.br/Cliente"
+            href="https://conteudo.kedu.com.br/appkedumulti"
             target="_blank"
             title="Site da Kedu"
-            >Kedu</a
+            >App Kedu</a
           >
         </li>
       </ul>
